--- a/pratica_2/pratica_2_9293286_9293251.ipynb
+++ b/pratica_2/pratica_2_9293286_9293251.ipynb
@@ -3697,7 +3697,7 @@
     "#### De acordo com o boxplot, há outliers nos seus atributos? se sim esses pontos marcados como outliers parecem mesmo outliers? explique. Considere outlier algum tipo de erro, de medição, ou digitação, ou inconsistência nos dados. Por exemplo, se um atributo estiver medindo altura de pessoas e um valor marcado como outlier é 19.5m, provavelmente é um erro de digitação a altura correta deveria ser 1.95m\n",
     "Pela análise feita existem muitos valores que estão fora dos limites e isso ocorre para vários atributos. Nesse ponto, encontramos vários problemas:\n",
     "\n",
-    "1) Alguns dados foram excluídos com a função dropna(), talvez isso tenha afetado os limites do boxplot.\n",
+    "1) Alguns dados foram excluídos com a função dropna(), talvez isso tenha afetado os limites do boxplot. <br>\n",
     "2) Por estarmos trabalhando com medidas realizadas em solo, é possível que ocorra uma variação muito grande. Além disso, sabemos que as medidas foram realizadas em fazendas diferentes. Talvez seja mais interessante analisar cada uma em separado.\n",
     "\n",
     "Tais problemas precisam de uma maior investigação, assim como necessitam da opinião de um especialista do domínio dos dados."
@@ -3928,7 +3928,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
