--- a/exercicio_1/AED_TH.ipynb
+++ b/exercicio_1/AED_TH.ipynb
@@ -372,7 +372,7 @@
     "\n",
     "Pelo fato de não haver tantos dados é díficil de se obter informações precisas. De qualquer forma, segundo nossas análises não há evidências fortes de que o dataset não siga uma normal multivariada\n",
     "\n",
-    "## A média dos atributos são equivalentes antes e depois da exposição ao pó\n",
+    "## A média dos atributos são equivalentes antes e depois da exposição ao pó ?\n",
     "\n",
     "Note pelo teste de hipótese T2 de Hotelling e pelos IC's que não devemos rejeitar a hipótese de que a média dos atributos são equivalentes. Logo, podemos concluir que mesmo com a exposição ao pó não afeta os trabalhadores para os atributos escolhidos."
    ]
