--- a/exercicio_1/AED_TH.ipynb
+++ b/exercicio_1/AED_TH.ipynb
@@ -376,6 +376,15 @@
     "\n",
     "Note pelo teste de hipótese T2 de Hotelling e pelos IC's que não devemos rejeitar a hipótese de que a média dos atributos são equivalentes. Logo, podemos concluir que mesmo com a exposição ao pó não afeta os trabalhadores para os atributos escolhidos."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusão\n",
+    "\n",
+    "Apesar de não possuir muitos dados (o que afeta nas estatísticas), é razoável afirmar que na média a exposição ao pó não afeta os trabalhores."
+   ]
   }
  ],
  "metadata": {
