Fix some things

--- a/exercicio_1/AED_TH.ipynb
+++ b/exercicio_1/AED_TH.ipynb
@@ -269,31 +269,11 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "4.26064287271542"
-      ],
-      "text/latex": [
-       "4.26064287271542"
-      ],
-      "text/markdown": [
-       "4.26064287271542"
-      ],
-      "text/plain": [
-       "[1] 4.260643"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
     "#Testar dados para ver se encaixam em uma distribuição normal bivariada\n",
-    "cor(measures)\n",
-    "test = HotellingsT2(measures)\n",
-    "qf(0.01, 3, 44, lower.tail=F)"
+    "cor(measures)"
    ]
   },
   {
@@ -374,7 +354,7 @@
     "\n",
     "## A média dos atributos são equivalentes antes e depois da exposição ao pó ?\n",
     "\n",
-    "Note pelo teste de hipótese T2 de Hotelling e pelos IC's que não devemos rejeitar a hipótese de que a média dos atributos são equivalentes. Logo, podemos concluir que mesmo com a exposição ao pó não afeta os trabalhadores para os atributos escolhidos."
+    "Note pelo teste de hipótese T2 de Hotelling que o seu p-valor é 0.05123, logo não devemos rejeitar a hipótese nula. Isso é confirmado pelos IC's. Assim, podemos concluir que mesmo com a exposição ao pó não afeta os trabalhadores para os atributos escolhidos. Contudo, faremos uma observação importante: o p-valor encontrado é muito próximo há 0.05123. Pelo teste de hipótese devemos sem dúvida aceitar a hipótese, de qualquer forma dada a proximidade do valor, seria interessante avaliar mais dados e repetir o procedimento na finalidade de ter mais certeza quanto ao resultado. Lembramos também que há outiliers na amostra, podendo afetar os dados. Logo, novamente reafirmamos, mais dados seriam necessários para conclusões mais precisas."
    ]
   },
   {
