Update Jupyter document

--- a/pratica_4/pratica_4_9293286_9293251.ipynb
+++ b/pratica_4/pratica_4_9293286_9293251.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Prática 4: Pré-Processamento\n",
+    "# Prática 4: Exploração de Dados - Parte IV\n",
     "\n",
     "### Kelvin Guilherme de Oliveira - 9293286\n",
     "### Lucas Yudi Sugi - 9293251"
@@ -14,15 +14,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Intro"
+    "Como nessa etapa do trabalho o foco está na Limpeza dos Dados, iremos analisar apenas o Dataset Falhas de Plantio, ao invés de também avaliar o Dataset Diabetes, uma vez que esse último é um Dataset mais bem elaborado e limpo, ou seja, está mais bem preparado para ser avaliado. Sendo assim, prosseguiremos o trabalho levando em consideração apenas o Dataset Falhas de Plantio."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Dataset: Falhos de plantio\n",
-    "\n"
+    "## Dataset: Falhas de plantio"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Analisando os atributos que foram escolhidos para realizar a prática anterior, podemos notar que existem problemas, como valores ausentes. Sendo assim, iremos analisar a base de dados por meio dos mesmos atributos, que são:\n",
+    "\n",
+    "Perc_Falha - Porcentagem de falha <br>\n",
+    "Perc_Infest_Inv - Porcentagem de infestação de pragas <br>\n",
+    "Ph - Ph do solo<br> \n",
+    "VM - Velocidade média de plantio<br>\n",
+    "FERT_L - Fertilizante(L)<br>"
    ]
   },
   {
@@ -46,6 +58,28 @@
    "metadata": {
     "scrolled": false
    },
+   "outputs": [],
+   "source": [
+    "#Leitura do dataset com o pandas\n",
+    "dataset = pd.read_csv('./datasets/agro/falhas_plantio_hashing.csv',sep=';',header=0,encoding='latin1',thousands=',')\n",
+    "\n",
+    "#Extração dos atributos necessários\n",
+    "agro = dataset[['Perc_Falha','Perc_Infest_Inv','VM','Ph','FERT_L']].copy()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Amostras com Problema\n",
+    "\n",
+    "Para analisar as amostras que possuem problemas em pelo menos um dos atributos mencionados acima, verificamos e contamos quantas delas possuem ao menos um valor ausente, e detectamos isso como um problema."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -56,12 +90,6 @@
     }
    ],
    "source": [
-    "#Leitura do dataset com o pandas\n",
-    "dataset = pd.read_csv('./datasets/agro/falhas_plantio_hashing.csv',sep=';',header=0,encoding='latin1',thousands=',')\n",
-    "\n",
-    "#Extração dos atributos necessários\n",
-    "agro = dataset[['Perc_Falha','Perc_Infest_Inv','VM','Ph','FERT_L']].copy()\n",
-    "\n",
     "#Contando as linhas com Nan valores\n",
     "counter = 0\n",
     "for i in range(len(agro)):\n",
@@ -69,6 +97,15 @@
     "        counter += 1\n",
     "\n",
     "print(\"Porcentagem de amostras com problema no dataset: \",counter/len(agro))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sendo assim, como pode ser visualizado acima, podemos notar que aproximadamente 47% do nosso Dataset tem valores ausentes. Ao avaliarmos a quantidade de valores ausentes por atributo, como mostrado abaixo, nota-se que não existem problemas desse tipo no Perc_Infest_Inv, existe bem pouco no FERT_L (< 1%) e no Perc_Falha (5.6%), porém, nos atributos VM e Ph, a quantidade de valores ausentes é muito grande (41.4% e 24.6%, respectivamente).\n",
+    "\n",
+    "Além desses problemas de valores ausentes, também notamos que, nos atributos que têm poucos problemas de tal tipo (Perc_Infest_Inv e FERT_L), a quantidade de valores iguais a Zero é muito grande, fato esse que pode influenciar na acurácia do algoritmo de Aprendizado de Máquina que pode ser executado no futuro."
    ]
   },
   {
@@ -101,16 +138,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Responder pergunta 1\n",
+    "### Origem dos Problemas\n",
     "\n",
-    "Falar que além dos problemas de Nan valores também temos muitos zeros nas colunas Perc_Infest_Inv e FERT_L (que foram descobertos por causas das praticas anteriores). Devemos remover ambos para que o algoritmo de aprendizado de maquina possa alcancar uma maior acuracia"
+    "Acreditamos que a grande maioria dos problemas encontrados nesse Dataset são de origem Aleatória, por fenômenos imprevisíveis que podem ocorrer no processo de coleta dos dados. Contudo, também acreditamos que alguns dos problemas podem ter ocorrido por falhas e limitações no processo ou dispositivo de coleta, por imaginarmos tratar-se de uma complexa coleta de dados (levando em consideração o domínio do conjunto de dados - plantações)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Responder pergunta 2"
+    "### Limpeza dos Dados\n",
+    "\n",
+    "#### 1 - Remoção das Amostras com Valores Ausentes no atributo Perc_Falha\n",
+    "Dado que poucas tuplas possuem valores ausentes no atributo, para manter a consistência da base de dados, preferimos remover tais tuplas, perdendo assim por volta de 5% dos dados, porém mantendo a consistência e autenticidade dos mesmos perante o processo de extração realizado."
    ]
   },
   {
@@ -143,6 +183,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2 - Remoção das Amostras com Valores Ausentes ou Iguais a Zero nos atributos Perc_Infest_Inv e FERT_L\n",
+    "De forma similar à efetuada no passo 1 da limpeza, também demos preferência por remover os registros com valores ausentes ou iguais a zero nos atributos mencionados, para que tenhamos uma base de dados limpa, e para que esses valores iguais a zero não influenciem na execução posterior do algoritmo de Aprendizado de Máquina."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -169,6 +217,16 @@
     "\n",
     "#Recalculando porcentagens de Nan por atributo\n",
     "agro.isna().sum() / len(agro)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 3 - Substituição dos Valores Ausentes das Amostras nos atributos VM e Ph por alguma Estatística Descritiva\n",
+    "Dado que as tuplas que possuem valores ausentes nos atributos VM e Ph correspondem a quase metade da nossa base de dados, preferimos não lidar com esse problema como nos casos anteriores, em que simplesmente excluímos os registros. Aqui, partimos para a abordagem de inserir valores de acordo com alguma Estatística Descritiva para popular tais tuplas.\n",
+    "\n",
+    "Antes disso, porém, salvamos uma cópia da base de dados sem os valores ausentes para uma avaliação posterior, o que é feito abaixo."
    ]
   },
   {
@@ -266,11 +324,18 @@
     }
    ],
    "source": [
-    "#Limpeza 1 - Remove os NaN valores\n",
+    "#Salva uma cópia da base de dados sem valores ausentes para futura avaliação\n",
     "agro1 = agro.dropna().copy()\n",
     "\n",
-    "#Mostando os dados\n",
+    "#Mostrando os dados\n",
     "agro1.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Prosseguindo na limpeza dos dados, optamos por apenas avaliar a Média e a Mediana dos valores das colunas que possuem os valores ausentes, pois tais estatísticas servem como bons representantes dos possíveis valores reais. Para avaliar qual das duas seria melhor, calculamos os valores de média e mediana, encontrando (conforme mostrado abaixo) valores similares. A fim de utilizar valores mais precisos, preferimos por escolher a Mediana para continuar o processo."
    ]
   },
   {
@@ -297,6 +362,13 @@
     "#Imprimindo as medianas de cada atributo\n",
     "print(\"Mediana de VM:\",agro['VM'].median())\n",
     "print(\"Mediana de Ph:\",agro['Ph'].median())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finalizando essa etapa, criamos uma cópia da base de dados em que preenchemos os valores dos atributos VM e Ph com a mediana correspondente, em todas as tuplas que tinham o problema dos valores ausentes."
    ]
   },
   {
@@ -401,8 +473,17 @@
     "median = agro2['Ph'].median()\n",
     "agro2['Ph'] = agro2['Ph'].fillna(median)\n",
     "\n",
-    "#Mostando os dados\n",
+    "#Mostrando os dados\n",
     "agro2.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Execução do Algoritmo\n",
+    "\n",
+    "Feito o processo de limpeza dos dados, agora podemos executar os classificadores ou regressores propostos pela prática. Para isso, abaixo está a implementação da função que irá realizar o procedimento e apresentar os resultados."
    ]
   },
   {
@@ -486,6 +567,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Na base de dados antes de realizarmos a limpeza, os algoritmos não executam, por conta dos valores ausentes. Sendo assim, executamos os algoritmos em dois casos: Primeiro com a base de dados limpa por conta da remoção dos valores ausentes (até mesmo as tuplas que não tinham os valores de VM e Ph, ou seja, 50% dos dados aproximadamente), e depois com a base de dados limpa pela remoção básica de valores ausentes e preenchimento pela mediana (conforme feita no passo anterior)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -532,6 +620,13 @@
     "#Regressão\n",
     "reg = reg_clas(agro2, [1,2,3,4], 0, regression=True)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Como pudemos verificar nos gráficos gerados acima, "
+   ]
   }
  ],
  "metadata": {
@@ -550,7 +645,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
