Developed some analysis

--- a/exercicio_3/Analise_obitos_pulmao.ipynb
+++ b/exercicio_3/Analise_obitos_pulmao.ipynb
@@ -94,7 +94,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Variável resposta e explicativas\n",
+    "\n",
     "Note que o objetivo deste documento é analisar o número de óbitos, logo, essa será a nossa variável resposta, i.e, o que desejamos estimar. A faixa etaria, número de cigarros diário e população serão nossas variáveis explicativas.\n",
+    "\n",
+    "## Modelo estatístico\n",
     "\n",
     "Assim, a partir das variáveis explicativas tentaremos estimar os óbitos por meio de um modelo linear generalizado (mlg ou glm em inglês) que será definido da seguinte maneira:\n",
     "\n",
@@ -165,7 +169,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Analisando a saída da função summary vemos que o desvio residual é relativamente baixo e comparando-o com o desvio nulo vemos que há uma grande diferença entre eles, logo, pode-se inferir que a utilização de outras variáveis (tirando a offset) auxiliou no modelagem. Portanto, acreditamos que nosso modelo está bem ajustado."
+    "## Ajuste do modelo\n",
+    "\n",
+    "Analisando a saída da função summary vemos que o desvio residual é relativamente baixo e comparando-o com o desvio nulo vemos que há uma grande diferença entre eles, logo, pode-se inferir que a utilização de outras variáveis (tirando a offset) auxiliou no modelagem. Portanto, acreditamos que nosso modelo está bem ajustado.\n",
+    "\n",
+    "## Significância dos parâmetros\n",
+    "\n",
+    "Analisando o p-value calculado em cima do z-value verificamos que as suas probabilidades são bem pequenas, isso signigica que a chance da hipótese nula ser aceita é muito pequena, ou seja, mesmo que utilizassemos um coeficiente de significância bem pequeno, ainda rejeitaríamos a hipótese nula. Como tal hipótese considera que os beta's são iguais a 0 e nós a rejeitamos, podemos concluir que nenhum dos coeficientes calculados devem ser desconsiderados, logo todos possuem uma alta significância no modelo.\n",
+    "\n",
+    "## Equação estimada\n",
+    "\n",
+    "Dado a saída da função summary, verificamos que a equação proposta pelo modelo possui a seguinte forma\n",
+    "\n",
+    "Y = 1.7693X1 + 2.8973X2 + 3.7915X3 + 1.4090X4 + 2.8662X5 + 3.7581X6 -11.4241\n",
+    "\n",
+    "onde\n",
+    "\n",
+    "Y = variável resposta (número de óbitos) <br>\n",
+    "X1 = Faixa etária 50-59<br>\n",
+    "X2 = Faixa etária 60-69<br>\n",
+    "X3 = Faixa etária 70-80<br>\n",
+    "X4 = Cigarros 1-9<br>\n",
+    "X5 = Cigarros 10-30<br>\n",
+    "X6 = Cigarros 30+<br>\n",
+    "\n",
+    "\n",
+    "## Interpretação dos parâmetros"
    ]
   }
  ],
