--- a/exercicio_3/Analise_obitos_pulmao.ipynb
+++ b/exercicio_3/Analise_obitos_pulmao.ipynb
@@ -289,7 +289,12 @@
     "\n",
     "Não obstante os atributos pareçam ser novos, a semântica continua a mesma e o modelo faz sentido. Ao analisarmos a probabilidade de um `z-value` ser mais relevante do que aquele dado pelo modelo percebe-se que idades mais elevadas e números maiores de cigarro por dia têm uma influência maior no óbito (por isso é improvável que os pesos sejam maiores).\n",
     "\n",
-    "Importante observar que os óbitos no modelo são por câncer de pulmão e têm possivelmente alguma correlação com o consumo de cigarros."
+    "Importante observar que os óbitos no modelo são por câncer de pulmão e têm possivelmente alguma correlação com o consumo de cigarros.\n",
+    "\n",
+    "## Conclusão\n",
+    "\n",
+    "Pelas análises feitas anteriomente podemos concluir que quanto maior a idade e o número médio de cigarros, a pessoa tende a possuir uma maior\n",
+    "probabilidade de ter câncer de pulmão. Tal fato é coerente com a realidade, pois quanto mais avançado a idade de uma pessoa, mais chances ela tem de ter doença, assim como quanto maior o número de cigarros, maiores os danos no pulmão."
    ]
   }
  ],
