Fix the equation

--- a/exercicio_3/Analise_obitos_pulmao.ipynb
+++ b/exercicio_3/Analise_obitos_pulmao.ipynb
@@ -270,20 +270,37 @@
     "\n",
     "Dado a saída da função `summary`, verificamos que a equação proposta pelo modelo possui a seguinte forma\n",
     "\n",
-    "`Y = 1.7693X1 + 2.8973X2 + 3.7915X3 + 1.4090X4 + 2.8662X5 + 3.7581X6 -11.4241`\n",
+    "`u = exp(1.7693X1 + 2.8973X2 + 3.7915X3 + 1.4090X4 + 2.8662X5 + 3.7581X6 -11.4241)`\n",
     "\n",
     "onde\n",
     "\n",
-    "`Y` = variável resposta (número de óbitos) <br>\n",
+    "`u` = valor esperado da variável resposta (número de óbitos) <br>\n",
     "`X1` = Faixa etária 50-59<br>\n",
     "`X2` = Faixa etária 60-69<br>\n",
     "`X3` = Faixa etária 70-80<br>\n",
     "`X4` = Cigarros 1-9<br>\n",
     "`X5` = Cigarros 10-30<br>\n",
     "`X6` = Cigarros 30+<br>\n",
+    "`-11.4241` = intercepto<br>\n",
     "\n",
     "\n",
     "## Interpretação dos parâmetros\n",
+    "\n",
+    "Fixando um modelo na faixa etária de 40-49 anos temos:\n",
+    "\n",
+    "`u = exp(1.7693X1 + 2.8973X2 + 3.7915X3 + 1.4090X4 + 2.8662X5 + 3.7581X6 -11.4241)`\n",
+    "\n",
+    "Já na faixa etária de 70-80:\n",
+    "\n",
+    "`u* = exp(1.7693X1 + 2.8973X2 + 3.7915 + 1.4090X4 + 2.8662X5 + 3.7581X6 -11.4241)`\n",
+    "\n",
+    "Realizando a divisão u*/u para verificar a taxa de óbitos avaliado na faixa etária de referência (40-49) com a de interesse (70-80) temos o seguinte resultado:\n",
+    "\n",
+    "`u*/u = exp(3.7915) = 44.32` (Lembre que X3 em u é zero por ser variável dummy)\n",
+    "\n",
+    "A partir disso, podemos concluir que fixado o número de cigarros por dia temos que uma pessoa na faixa etária de 70-80 anos comparado com a de 40-49 anos possui aproximadamente 44 vezes mais chances de morrer por cancêr de pulmão.\n",
+    "\n",
+    "## Conclusão\n",
     "\n",
     "Os parâmetros selecionados para o modelo são \"transformações\" dos parâmetros originais, pois estes eram em sua maioria categóricos (tratando faixas de valor como uma categoria) e aqueles são variáveis binárias que indicam se uma categoria ocorreu ou não em determinada observação.\n",
     "\n",
@@ -291,9 +308,7 @@
     "\n",
     "Importante observar que os óbitos no modelo são por câncer de pulmão e têm possivelmente alguma correlação com o consumo de cigarros.\n",
     "\n",
-    "## Conclusão\n",
-    "\n",
-    "Pelas análises feitas anteriomente podemos concluir que quanto maior a idade e o número médio de cigarros, a pessoa tende a possuir uma maior\n",
+    "Assim, pelas análises feitas anteriomente podemos concluir que quanto maior a idade e o número médio de cigarros, a pessoa tende a possuir uma maior\n",
     "probabilidade de ter câncer de pulmão. Tal fato é coerente com a realidade, pois quanto mais avançado a idade de uma pessoa, mais chances ela tem de ter doença, assim como quanto maior o número de cigarros, maiores os danos no pulmão."
    ]
   }
