--- a/exercicio_2/AED_MODELAGEM.ipynb
+++ b/exercicio_2/AED_MODELAGEM.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "## Objetivos\n",
     "\n",
-    "Iremos analisar o dataset multi.dat que contém 32 observações sobre os atributos pressão arterial(pa), idade(id), icm e hábito de fumar(hf). Desejamos verificar qual a relação entre id,hf e icm com pa. Para isso, inicialmente iremos realizar uma análise exploratória e depois iremos gerar um modelo que se ajuste aos dados."
+    "Iremos analisar o dataset multi.dat que contém 32 observações sobre os atributos pressão arterial(pa), idade(id), imc e hábito de fumar(hf). Desejamos verificar qual a relação entre id,hf e imc com pa. Para isso, inicialmente iremos realizar uma análise exploratória e depois iremos gerar um modelo que se ajuste aos dados."
    ]
   },
   {
@@ -473,7 +473,7 @@
     "\n",
     "Após todas as etapas fica evidente que é extremamente necessário realizar uma análise dos dados antes de gerar um modelo. Caso isso não tivesse sido feito, teríamos escolhido um modelo errado que obteria falsas conclusões. Além disso, ao final foi possível identificar que o hábito de fumar influencia na pressão arterial e deve ser utilizado na modelagem. Ademais, a escolha do imc ou idade é quase que equivalente (ao menos até agora) para o modelo. \n",
     "\n",
-    "Em breve, novas estatísticas serão realizadas"
+    "Em breve, novas estatísticas serão realizadas."
    ]
   }
  ],
